gcc/testsuite/rust/rustc/ui/issues/issue-18118-2.rs
pub fn main() {
    const z: &'static isize = {
        static p: isize = 3;
        &p // { dg-error ".E0013." "" { target *-*-* } }
    };
}

